# rofi-kaomoji

./: Cargo.toml  README.md  kaomoji.ron  kaomoji.txt
src/: main.rs
