[package]
name = "rofi-kaomoji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ron = "0.8.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

[profile.release]
lto = true
